@@ -246,6 +246,10 @@ class StrictCommitFailed(BzrNewError):
 
 # XXX: Should be unified with TransportError; they seem to represent the
 # same thing
+# RBC 20060929: I think that unifiying with TransportError would be a mistake
+# - this is finer than a TransportError - and more useful as such. It 
+# differentiates between 'transport has failed' and 'operation on a transport
+# has failed.'
 class PathError(BzrNewError):
     """Generic path error: %(path)r%(extra)s)"""
 
@@ -295,6 +299,10 @@ class UnsupportedProtocol(PathError):
 
     def __init__(self, url, extra):
         PathError.__init__(self, url, extra=extra)
+
+
+class ReadError(PathError):
+    """Error reading from %(path)r."""
 
 
 class ShortReadvError(PathError):
